# lethal_whalers

./: .gitignore  README.md  manifest.json  pyproject.toml
.github/: submit.yaml
.github/worfklows/: submit.yaml  submit.yml
.github/workflows/: submit.yml
lethal_whalers/: __main__.py  _version.py  api_client.py  manifest_manager.py
lib/: README.md  openapi_client-0.1.0-py3-none-any.whl
modpack/: manifest.json
