[tool.poetry]
name = "lethal_whalers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
requests = "^2.31.0"
openapi_client = { file = 'lib/openapi_client-0.1.0-py3-none-any.whl' }
isort = "^5.13.2"
black = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
